# MusicMigration

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/application/handlers/: music.py  users.py
backend/internal/: database.py
backend/internal/models/: tokens.py  users.py
backend/internal/security/: jwt_tokens.py
backend/internal/sql/: user_sql.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Auth/: AuthModal.tsx
frontend/src/components/Layout/: Header.tsx  ProtectedRoute.tsx  index.ts
frontend/src/components/UI/: Button.tsx  FileUpload.tsx  Input.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts  authService.ts  musicService.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: storage.ts
